--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,23 +1,66 @@
 {
   "packages": {
-    ".": {}
+    ".": {},
+    "undefined": {
+      "releaseType": "node",
+      "packageName": "chore-tracker-api",
+      "draft": false,
+      "prerelease": false,
+      "bumpMinorPreMajor": false,
+      "bumpPatchForMinorPreMajor": false,
+      "changelogPath": "CHANGELOG.md",
+      "versioning": "default"
+    }
   },
   "release-as": "0.1.0",
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "changelog-sections": [
-  { "type": "feat", "section": "Features" },
-  { "type": "fix", "section": "Bug Fixes" },
-  { "type": "perf", "section": "Performance Improvements" },
-  { "type": "revert", "section": "Reverts" },
-  { "type": "docs", "section": "Documentation"},
-  { "type": "style", "section": "Styles" },
-  { "type": "chore", "section": "Miscellaneous Chores" },
-  { "type": "refactor", "section": "Code Refactoring" },
-  { "type": "test", "section": "Tests" },
-  { "type": "build", "section": "Build System" },
-  { "type": "ci", "section": "Continuous Integration" }
-],
-"prelease": true,
-"group-pull-request-title-pattern": "chore(release): ${version}"
+    {
+      "type": "feat",
+      "section": "Features"
+    },
+    {
+      "type": "fix",
+      "section": "Bug Fixes"
+    },
+    {
+      "type": "perf",
+      "section": "Performance Improvements"
+    },
+    {
+      "type": "revert",
+      "section": "Reverts"
+    },
+    {
+      "type": "docs",
+      "section": "Documentation"
+    },
+    {
+      "type": "style",
+      "section": "Styles"
+    },
+    {
+      "type": "chore",
+      "section": "Miscellaneous Chores"
+    },
+    {
+      "type": "refactor",
+      "section": "Code Refactoring"
+    },
+    {
+      "type": "test",
+      "section": "Tests"
+    },
+    {
+      "type": "build",
+      "section": "Build System"
+    },
+    {
+      "type": "ci",
+      "section": "Continuous Integration"
+    }
+  ],
+  "prelease": true,
+  "group-pull-request-title-pattern": "chore(release): ${version}"
 }
