--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: google-github-actions/release-please-action@v3
         with:
           release-type: 'node'
+          token: ${{ secrets.GH_PAT }}
           bump-minor-pre-major: true
           bump-patch-for-minor-pre-major: true
           changelog-sections: '[{ "type": "feat", "section": "Features" },{ "type": "fix", "section": "Bug Fixes" },{ "type": "perf", "section": "Performance Improvements" },{ "type": "revert", "section": "Reverts" },{ "type": "docs", "section": "Documentation"},{ "type": "style", "section": "Styles" },{ "type": "chore", "section": "Miscellaneous Chores" },{ "type": "refactor", "section": "Code Refactoring" },{ "type": "test", "section": "Tests" },{ "type": "build", "section": "Build System" },{ "type": "ci", "section": "Continuous Integration" }]'
