--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,5 +13,6 @@ jobs:
           bump-minor-pre-major: true
           bump-patch-for-minor-pre-major: true
           changelog-sections: '[{ "type": "feat", "section": "Features" },{ "type": "fix", "section": "Bug Fixes" },{ "type": "perf", "section": "Performance Improvements" },{ "type": "revert", "section": "Reverts" },{ "type": "docs", "section": "Documentation"},{ "type": "style", "section": "Styles" },{ "type": "chore", "section": "Miscellaneous Chores" },{ "type": "refactor", "section": "Code Refactoring" },{ "type": "test", "section": "Tests" },{ "type": "build", "section": "Build System" },{ "type": "ci", "section": "Continuous Integration" }]'
+          changelog-type: 'github'
           prelease: true
           group-pull-request-title-pattern: "chore(release): ${version}"
